--- a/SiteStyles.css
+++ b/SiteStyles.css
@@ -16,7 +16,7 @@ body {
   float: left !important;
   margin-left: 15rem;
   margin-top: 2rem;
-  background-image: url(http://www.produccion.gob.ar/wp-content/uploads/2016/10/Logo_MinProd.png) !important;
+  background-image: url(http://img.mailingproduccion.gob.ar/argentinagob.png) !important;
   background-size: 290px auto !important;
   height: 100px!important;
   min-width: 100%;
@@ -125,7 +125,6 @@ h1.titulo {
   color: #444444;
   font-size: 18px;
   padding-bottom: 25px;
-  ;
   float: none !important;
   width: auto;
 }
@@ -151,6 +150,24 @@ h1.titulo {
 }
 
 input, textarea, select {
+  background: #ffffff;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  height: 30px;
+  color: #000000;
+  float: left;
+  font-size: 0.8rem;
+  letter-spacing: 1px;
+  padding: 3px;
+  font-family: "roboto", Helvetica, sans-serif !important;
+}
+
+select{
+  height: 38px !important
+}
+
+.detalle_solicitud input, .items-list input
+{
   background: #ffffff;
   border: 1px solid #ccc;
   border-radius: 4px;
@@ -232,4 +249,17 @@ a.btn_gral:hover span {
   float: left;
   padding-top: 8px !important;
   padding-left: 10px !important;
+}
+
+.mensaje {
+  background: #d9f4e3;
+  margin-bottom: 20px;
+  border: 1px solid #5ad083;
+  border-radius: 4px;
+  color: #444;
+  font-weight: 300;
+}
+
+.mensaje strong{
+  color: #000 !important;
 }
